fixed issue with overlay nav collapsing

--- a/src/assets/scss/components/_header-nav.scss
+++ b/src/assets/scss/components/_header-nav.scss
@@ -103,6 +103,7 @@
   display: block;
   transition: 0.3s;
   text-transform: capitalize;
+  white-space: nowrap;
 }
 
 .overlay a:hover,
